Remove existing pub crawl UI

--- a/crawl-auto.html
+++ b/crawl-auto.html
@@ -3,376 +3,22 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Auto-plan a crawl — Sunny</title>
-
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="anonymous"/>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin="anonymous"></script>
-
+  <title>Sunny — Rebuild in progress</title>
   <style>
-    :root { --bg:#fff; --fg:#111; --muted:#6b7280; --brand:#0f172a; }
-    *{box-sizing:border-box}
-    html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;background:#fff;color:#111}
-    .topbar{position:sticky;top:0;z-index:1000;display:flex;align-items:center;gap:.75rem;padding:.75rem 1rem;border-bottom:1px solid #eee;background:#fff}
-    .topbar a{color:#111;text-decoration:none;font-weight:700}
-    .topbar h1{margin:0;font-size:1.05rem}
-    .layout{display:grid;grid-template-columns: 360px 1fr; height: calc(100dvh - 52px);}
-    @media (max-width: 900px){ .layout{grid-template-columns: 1fr; grid-template-rows: auto 1fr;} .panel{border-right:none;border-bottom:1px solid #eee} }
-
-    .panel{padding:14px;border-right:1px solid #eee;overflow:auto}
-    .field{margin-bottom:12px}
-    .field label{display:block;font-weight:700;margin-bottom:6px}
-    .field input,.field select{width:100%;padding:10px;border-radius:10px;border:1px solid #e5e7eb}
-    .row{display:flex;gap:10px}
-    .row .field{flex:1}
-    .btn{appearance:none;border:none;border-radius:12px;padding:12px 14px;font-weight:800;cursor:pointer}
-    .btn.primary{background:var(--brand);color:#fff}
-    .btn.secondary{background:#f1f5f9;color:#111}
-    .muted{color:var(--muted)}
-    .note{font-size:12px;color:var(--muted)}
-    .sep{height:1px;background:#eee;margin:12px 0}
-
-    #map{width:100%;height:100%}
-
-    .stop{border:1px solid #eee;border-radius:12px;padding:10px;margin:8px 0}
-    .stop h3{margin:0;font-size:15px}
-    .badges{display:flex;gap:8px;flex-wrap:wrap;margin:6px 0}
-    .badge{font-size:12px;border:1px solid #e5e7eb;border-radius:999px;padding:4px 8px;color:#374151;background:#fff}
-    .btnrow{display:flex;gap:8px;flex-wrap:wrap}
-    .btn.link{background:#fff;border:1px solid #e5e7eb;color:#0a66c2}
+    :root { --bg:#0f172a; --fg:#f8fafc; --muted:#94a3b8; }
+    * { box-sizing: border-box; }
+    html, body { height: 100%; margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background: var(--bg); color: var(--fg); }
+    main { min-height: 100%; display: grid; place-items: center; text-align: center; padding: 24px; }
+    h1 { margin: 0 0 8px; font-size: clamp(1.8rem, 3vw, 2.6rem); }
+    p { margin: 0; color: var(--muted); font-size: 1rem; }
   </style>
 </head>
 <body>
-  <div class="topbar">
-    <a href="crawl.html">← Back</a>
-    <h1>Auto-plan a crawl</h1>
-    <div style="margin-left:auto" class="note">Drag the map if location is off</div>
-  </div>
-
-  <div class="layout">
-    <div class="panel">
-      <div class="field">
-        <label>Starting area</label>
-        <div class="note">We’ll start near the map center. Use “Locate me” or drag the map.</div>
-        <div class="row" style="margin-top:8px">
-          <button id="locate" class="btn secondary">📍 Locate me</button>
-          <button id="recenter" class="btn secondary">Use map center</button>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="field">
-          <label># of stops</label>
-          <input type="number" id="stops" min="2" max="8" value="4">
-        </div>
-        <div class="field">
-          <label>Dwell time (min per pub)</label>
-          <input type="number" id="dwell" min="10" max="120" value="35">
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="field">
-          <label>Start time</label>
-          <input type="time" id="startTime">
-        </div>
-        <div class="field">
-          <label>Travel mode</label>
-          <select id="mode">
-            <option value="walk">Walk</option>
-            <option value="ride">Ride (est.)</option>
-          </select>
-        </div>
-      </div>
-
-      <div class="field">
-        <button id="generate" class="btn primary" style="width:100%">Create crawl</button>
-      </div>
-
-      <div class="sep"></div>
-
-      <div id="itineraryIntro" class="muted">Your itinerary will appear here.</div>
-      <div id="itinerary"></div>
-
-      <div style="margin-top:10px;display:flex;gap:8px;flex-wrap:wrap">
-        <button id="shareCrawl" class="btn secondary">Share crawl</button>
-      </div>
+  <main>
+    <div>
+      <h1>Sunny is rebuilding</h1>
+      <p>The pub crawl experience is being redesigned from the ground up.</p>
     </div>
-
-    <div id="map"></div>
-  </div>
-
-<script>
-const TILE_URL = "https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png";
-const TILE_ATTR = '&copy; <a href="https://www.openstreetmap.org/copyright">OSM</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>';
-const OVERPASS = [
-  "https://overpass-api.de/api/interpreter",
-  "https://overpass.kumi.systems/api/interpreter",
-  "https://overpass.openstreetmap.ru/api/interpreter"
-];
-const MARKER_ICON_URL = "icons/marker.png";
-const markerIcon = L.icon({ iconUrl: MARKER_ICON_URL, iconSize:[28,28], iconAnchor:[14,28], popupAnchor:[0,-28] });
-
-let map = L.map('map').setView([-32.9267, 151.7789], 13);
-L.tileLayer(TILE_URL, { maxZoom: 19, attribution: TILE_ATTR }).addTo(map);
-let centerMarker = L.circleMarker(map.getCenter(), { radius:6, color:'#0f172a' }).addTo(map);
-map.on('move', ()=> centerMarker.setLatLng(map.getCenter()));
-
-let routeLayer = L.layerGroup().addTo(map);
-
-function toTitle(s=""){return s? s.replace(/\b\w/g,c=>c.toUpperCase()):"";}
-function haversine(lat1, lon1, lat2, lon2){ const R=6371, toRad=x=>x*Math.PI/180;
-  const dLat=toRad(lat2-lat1), dLon=toRad(lon2-lon1);
-  const a=Math.sin(dLat/2)**2 + Math.cos(toRad(lat1))*Math.cos(toRad(lat2))*Math.sin(dLon/2)**2;
-  return 2*R*Math.asin(Math.sqrt(a));
-}
-function minsWalk(km){ return (km/4.5)*60; }
-function minsRide(km){ return 5 + (km/25)*60; }
-function looksOutdoor(tags = {}){
-  const t = (x)=> (x||"").toLowerCase();
-  const name = t(tags.name);
-  const desc = t(tags.description || tags.note || "");
-  const outdoor = tags.outdoor_seating==="yes" || tags.terrace==="yes" || tags.roof_terrace==="yes" || tags.garden==="yes" || tags.patio==="yes";
-  const nameHints = /beer ?garden|courtyard|terrace|rooftop|roof ?top|outdoor|al ?fresco/.test(name);
-  const textHints = /courtyard|terrace|rooftop|beer ?garden|patio|alfresco/.test(desc);
-  return !!(outdoor || nameHints || textHints);
-}
-function buildQuery(lat,lng,km=3){
-  const radius = km*1000;
-  return `
-    [out:json][timeout:25];
-    (
-      node(around:${radius},${lat},${lng})["amenity"~"^(pub|bar|biergarten)$"];
-      way(around:${radius},${lat},${lng})["amenity"~"^(pub|bar|biergarten)$"];
-      relation(around:${radius},${lat},${lng})["amenity"~"^(pub|bar|biergarten)$"];
-
-      node(around:${radius},${lat},${lng})["amenity"="restaurant"]["outdoor_seating"="yes"];
-      way(around:${radius},${lat},${lng})["amenity"="restaurant"]["outdoor_seating"="yes"];
-      relation(around:${radius},${lat},${lng})["amenity"="restaurant"]["outdoor_seating"="yes"];
-
-      node(around:${radius},${lat},${lng})["amenity"="restaurant"]["garden"="yes"];
-      way(around:${radius},${lat},${lng})["amenity"="restaurant"]["garden"="yes"];
-      relation(around:${radius},${lat},${lng})["amenity"="restaurant"]["garden"="yes"];
-
-      node(around:${radius},${lat},${lng})["amenity"="restaurant"]["terrace"="yes"];
-      way(around:${radius},${lat},${lng})["amenity"="restaurant"]["terrace"="yes"];
-      relation(around:${radius},${lat},${lng})["amenity"="restaurant"]["terrace"="yes"];
-    );
-    out center tags;`;
-}
-async function overpass(query){
-  const body = new URLSearchParams({ data: query });
-  for (const url of OVERPASS){
-    try{
-      const r = await fetch(url, { method:'POST', body });
-      if(!r.ok) continue;
-      const j = await r.json();
-      if (j && j.elements) return j.elements;
-    }catch{}
-  }
-  throw new Error('Overpass failed');
-}
-function normalize(el){
-  const tags = el.tags || {};
-  let lat = el.lat, lng = el.lon;
-  if ((!lat || !lng) && el.center){ lat = el.center.lat; lng = el.center.lon; }
-  return { id:`${el.type}/${el.id}`, name: tags.name || tags.brand || toTitle(tags.operator) || 'Unnamed', lat, lng, tags, outdoor: looksOutdoor(tags) };
-}
-function scoreVenue(v, origin){
-  const dist = haversine(origin.lat, origin.lng, v.lat, v.lng);
-  const outdoorBonus = v.outdoor ? -0.3 : 0;
-  return dist + outdoorBonus;
-}
-function planRoute(origin, venues, count, mode, dwellMins, startTimeStr){
-  const candidates = [...venues].sort((a,b)=> scoreVenue(a, origin) - scoreVenue(b, origin)).slice(0, Math.max(2, count*2));
-  let current = origin;
-  const ordered = [];
-  const remaining = new Set(candidates.map(v=>v.id));
-  const byId = Object.fromEntries(candidates.map(v=>[v.id,v]));
-  while (ordered.length < count && remaining.size){
-    let best=null, bestD=Infinity, bestId=null;
-    for (const id of remaining){
-      const v = byId[id];
-      const d = haversine(current.lat, current.lng, v.lat, v.lng);
-      if (d < bestD){ bestD = d; best = v; bestId = id; }
-    }
-    if(!best) break;
-    ordered.push(best);
-    remaining.delete(bestId);
-    current = best;
-  }
-
-  const parts = [];
-  let time = parseStartTime(startTimeStr);
-  let totalKm = 0;
-  let prev = origin;
-
-  for (const v of ordered){
-    const km = haversine(prev.lat, prev.lng, v.lat, v.lng);
-    totalKm += km;
-    const travelMins = Math.max(1, Math.round((mode==='walk' ? minsWalk(km) : minsRide(km))));
-    time = addMinutes(time, travelMins);
-    const arrive = fmtTime(time);
-    const depart = fmtTime(addMinutes(time, dwellMins));
-    parts.push({ v, km: km.toFixed(2), travelMins, arrive, depart });
-    time = addMinutes(time, dwellMins);
-    prev = v;
-  }
-
-  return { stops: parts, totalKm: totalKm.toFixed(2), finish: fmtTime(time) };
-}
-function parseStartTime(t){
-  if (!t){ const d=new Date(); return new Date(d.getFullYear(),d.getMonth(),d.getDate(), d.getHours(), d.getMinutes()); }
-  const [hh,mm] = t.split(':').map(Number);
-  const d=new Date(); return new Date(d.getFullYear(),d.getMonth(),d.getDate(), hh, mm||0);
-}
-function addMinutes(d, m){ return new Date(d.getTime()+m*60000); }
-function fmtTime(d){ return d.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'}); }
-function encodeCrawl(obj){
-  const json = JSON.stringify(obj);
-  return btoa(unescape(encodeURIComponent(json))).replace(/\+/g,'-').replace(/\//g,'_').replace(/=+$/,'');
-}
-function buildShareUrl(crawl){
-  const url = new URL(location.origin + location.pathname.replace('crawl-auto.html','crawl-share.html'));
-  url.searchParams.set('c', encodeCrawl(crawl));
-  return url.toString();
-}
-
-async function generate(){
-  document.getElementById('itineraryIntro').textContent = 'Finding venues near the map center…';
-  document.getElementById('itinerary').innerHTML = '';
-  routeLayer.clearLayers();
-
-  const center = map.getCenter();
-  const stops = Math.max(2, Math.min(8, parseInt(document.getElementById('stops').value || '4', 10)));
-  const dwell = Math.max(10, Math.min(120, parseInt(document.getElementById('dwell').value || '35', 10)));
-  const mode = document.getElementById('mode').value;
-  const startTime = document.getElementById('startTime').value;
-
-  const query = buildQuery(center.lat, center.lng, 3);
-  let elements = [];
-  try{ elements = await overpass(query); }catch(e){ console.error(e); }
-  const venues = elements.map(normalize).filter(v=>v.lat && v.lng);
-
-  if (!venues.length){
-    document.getElementById('itineraryIntro').textContent = 'No venues found nearby. Try moving the map and try again.';
-    return;
-  }
-
-  const plan = planRoute({lat:center.lat,lng:center.lng}, venues, stops, mode, dwell, startTime);
-  const crawl = {
-    startTime,
-    dwell,
-    mode,
-    stops: plan.stops.map(p => ({
-      name: p.v.name,
-      lat: p.v.lat,
-      lng: p.v.lng,
-      website: p.v.tags && p.v.tags.website ? String(p.v.tags.website).replace(/^http:\/\//,'https://') : null,
-      amenity: p.v.tags && p.v.tags.amenity,
-      outdoor: !!(p.v.outdoor)
-    }))
-  };
-
-  const poly = [];
-  let idx = 1;
-  for (const part of plan.stops){
-    const v = part.v;
-    poly.push([v.lat, v.lng]);
-    const html = `
-      <div style="min-width:220px;max-width:260px">
-        <div style="font-weight:800">${idx}. ${v.name}</div>
-        <div class="muted" style="margin:4px 0">${toTitle(v.tags.amenity || 'Pub')}${v.outdoor?' · 🌿 Outdoor':''}</div>
-        <div class="btnrow" style="margin-top:6px">
-          <a class="btn link" target="_blank" rel="noopener" href="https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(v.name)}">Directions</a>
-          <a class="btn link" target="_blank" rel="noopener" href="https://m.uber.com/ul/?action=setPickup&dropoff[latitude]=${v.lat}&dropoff[longitude]=${v.lng}&dropoff[nickname]=${encodeURIComponent(v.name)}">Uber</a>
-        </div>
-      </div>`;
-    L.marker([v.lat,v.lng], { icon: markerIcon }).bindPopup(html).addTo(routeLayer);
-    idx++;
-  }
-  L.polyline(poly, { color:'#0f172a', weight:4, opacity:.9 }).addTo(routeLayer);
-  map.fitBounds(L.polyline(poly).getBounds(), { padding:[40,40] });
-
-  document.getElementById('itineraryIntro').innerHTML = `
-    <strong>${plan.stops.length} stops</strong> · ~${plan.totalKm} km total · finish around <strong>${plan.finish}</strong>
-  `;
-  const itEl = document.getElementById('itinerary');
-  itEl.innerHTML = plan.stops.map((p, i)=> {
-    const v = p.v, website = v.tags.website ? String(v.tags.website).replace(/^http:\/\//,'https://') : null;
-    return `
-      <div class="stop">
-        <h3>${i+1}. ${v.name}</h3>
-        <div class="badges">
-          <span class="badge">${toTitle(v.tags.amenity || 'Pub')}</span>
-          ${v.outdoor?'<span class="badge">🌿 Outdoor</span>':''}
-          <span class="badge">Arrive ${p.arrive}</span>
-          <span class="badge">Depart ${p.depart}</span>
-          <span class="badge">${p.km} km · ${p.travelMins} min ${mode}</span>
-        </div>
-        <div class="btnrow">
-          <a class="btn link" target="_blank" rel="noopener" href="https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(v.name)}">Directions</a>
-          <a class="btn link" target="_blank" rel="noopener" href="https://m.uber.com/ul/?action=setPickup&dropoff[latitude]=${v.lat}&dropoff[longitude]=${v.lng}&dropoff[nickname]=${encodeURIComponent(v.name)}">Uber</a>
-          ${website?`<a class="btn link" target="_blank" rel="noopener" href="${website}">Website</a>`:''}
-        </div>
-      </div>
-    `;
-  }).join('');
-
-  const shareBtn = document.getElementById('shareCrawl');
-  if (shareBtn) {
-    shareBtn.onclick = ()=> window.open(buildShareUrl(crawl), '_blank');
-  }
-
-  return { plan, crawl };
-}
-
-document.getElementById('generate').addEventListener('click', generate);
-
-(function setDefaultTime(){
-  const d = new Date();
-  d.setMinutes(d.getMinutes() + (5 - (d.getMinutes()%5))%5, 0, 0);
-  document.getElementById('startTime').value = d.toTimeString().slice(0,5);
-})();
-
-(function hydrateFromWizard(){
-  const params = new URLSearchParams(window.location.search);
-  const autoStart = params.has('autostart');
-  const autoShare = params.get('autoshare') === '1';
-  if (!autoStart) return;
-
-  const stops = params.get('stops');
-  if (stops) document.getElementById('stops').value = stops;
-
-  const dwell = params.get('dwell');
-  if (dwell) document.getElementById('dwell').value = dwell;
-
-  const time = params.get('time');
-  if (time) document.getElementById('startTime').value = time;
-
-  const mode = params.get('mode');
-  const modeValue = mode === 'walk' || mode === 'ride' ? mode : mode === 'transit' ? 'ride' : null;
-  if (modeValue) {
-    document.getElementById('mode').value = modeValue;
-  }
-
-  setTimeout(async ()=>{
-    const result = await generate();
-    if (autoShare && result && result.crawl) {
-      window.location.href = buildShareUrl(result.crawl);
-    }
-  }, 50);
-})();
-
-document.getElementById('locate').addEventListener('click', (e)=>{
-  e.preventDefault();
-  if (!navigator.geolocation) return alert('Geolocation not available.');
-  navigator.geolocation.getCurrentPosition(
-    pos => map.setView([pos.coords.latitude, pos.coords.longitude], 14),
-    () => alert('Could not get your location; drag the map to your start area.'),
-    { enableHighAccuracy:true, timeout:8000, maximumAge:600000 }
-  );
-});
-document.getElementById('recenter').addEventListener('click', (e)=>{ e.preventDefault(); map.setView(map.getCenter(), map.getZoom()); });
-</script>
+  </main>
 </body>
 </html>
