--- a/crawl.html
+++ b/crawl.html
@@ -3,22 +3,249 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sunny — Rebuild in progress</title>
+  <title>Plan a pub crawl — Sunny</title>
   <style>
-    :root { --bg:#0f172a; --fg:#f8fafc; --muted:#94a3b8; }
+    :root { --bg:#fff; --fg:#0f172a; --muted:#6b7280; --border:#e5e7eb; --accent:#0f172a; }
     * { box-sizing: border-box; }
-    html, body { height: 100%; margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background: var(--bg); color: var(--fg); }
-    main { min-height: 100%; display: grid; place-items: center; text-align: center; padding: 24px; }
-    h1 { margin: 0 0 8px; font-size: clamp(1.8rem, 3vw, 2.6rem); }
-    p { margin: 0; color: var(--muted); font-size: 1rem; }
+    html, body { height: 100%; margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; color: var(--fg); background: var(--bg); }
+    body { display: flex; flex-direction: column; }
+    .topbar { position: sticky; top: 0; z-index: 10; display: flex; align-items: center; gap: .75rem; padding: .75rem 1rem; border-bottom: 1px solid var(--border); background: #fff; }
+    .topbar a { color: var(--fg); text-decoration: none; font-weight: 700; }
+    .topbar h1 { margin: 0; font-size: 1.05rem; }
+
+    .wrapper { flex: 1; display: flex; justify-content: center; padding: 12px 12px 24px; }
+    .card { width: min(600px, 100%); background: #fff; border: 1px solid var(--border); border-radius: 16px; padding: 16px; box-shadow: 0 14px 28px rgba(0,0,0,0.05); display: flex; flex-direction: column; gap: 10px; }
+
+    .step-indicator { display: flex; align-items: center; gap: 8px; font-weight: 700; }
+    .pill { border-radius: 999px; padding: 6px 12px; border: 1px solid var(--border); color: var(--muted); font-weight: 700; font-size: 13px; }
+    .pill.active { background: var(--accent); color: #fff; border-color: var(--accent); }
+
+    .step { display: none; flex-direction: column; gap: 12px; min-height: 220px; }
+    .step.active { display: flex; }
+    .step h2 { margin: 0; font-size: 1.2rem; }
+    .step p { margin: 0; color: var(--muted); }
+
+    .option { border: 1px solid var(--border); border-radius: 12px; padding: 12px; display: flex; gap: 10px; align-items: flex-start; cursor: pointer; transition: border-color .15s ease, box-shadow .15s ease; }
+    .option:hover { border-color: #cbd5e1; box-shadow: 0 8px 20px rgba(0,0,0,0.04); }
+    .option input { margin-top: 4px; }
+    .option label { display: flex; gap: 10px; flex: 1; cursor: pointer; align-items: flex-start; }
+    .option strong { display: block; }
+    .muted { color: var(--muted); }
+
+    .field { display: flex; flex-direction: column; gap: 6px; }
+    .field label { font-weight: 700; }
+    .field input, .field select { padding: 12px; border-radius: 12px; border: 1px solid var(--border); font-size: 1rem; }
+
+    .controls { display: flex; justify-content: space-between; gap: 8px; margin-top: auto; }
+    .btn { appearance: none; border: none; padding: 12px 14px; border-radius: 12px; font-weight: 800; cursor: pointer; font-size: 1rem; }
+    .btn.secondary { background: #f1f5f9; color: var(--fg); }
+    .btn.primary { background: var(--accent); color: #fff; flex: 1; }
+    .btn[disabled] { opacity: .5; cursor: not-allowed; }
+
+    .summary { border: 1px solid var(--border); border-radius: 12px; padding: 12px; display: grid; gap: 8px; }
+    .summary-row { display: flex; justify-content: space-between; gap: 8px; font-size: 14px; }
+    .summary-row span:last-child { font-weight: 700; }
   </style>
 </head>
 <body>
-  <main>
-    <div>
-      <h1>Sunny is rebuilding</h1>
-      <p>The pub crawl experience is being redesigned from the ground up.</p>
+  <div class="topbar">
+    <a href="./">← Back</a>
+    <h1>Plan a pub crawl</h1>
+  </div>
+
+  <div class="wrapper">
+    <div class="card">
+      <div class="step-indicator">
+        <span class="pill" id="pill">Step 1 of 5</span>
+        <span class="muted">Tap next to keep going</span>
+      </div>
+
+      <div class="step active" data-step="1">
+        <h2>Where do you want to start?</h2>
+        <p>Pick how we should choose stop one.</p>
+        <div class="option">
+          <input type="radio" id="start-near" name="start" value="nearest" checked>
+          <label for="start-near"><span><strong>Nearest pub</strong><span class="muted">We’ll use your location.</span></span></label>
+        </div>
+        <div class="option">
+          <input type="radio" id="start-specific" name="start" value="specific">
+          <label for="start-specific"><span><strong>Specific pub</strong><span class="muted">Type the pub and we’ll pin it as stop one.</span></span></label>
+        </div>
+        <div class="field" id="specificField" style="display:none;">
+          <label for="specificInput">Pub name</label>
+          <input id="specificInput" type="text" placeholder="e.g. The Royal Oak">
+        </div>
+        <div class="option">
+          <input type="radio" id="start-postcode" name="start" value="postcode">
+          <label for="start-postcode"><span><strong>Input a postcode</strong><span class="muted">We’ll suggest a popular pub there.</span></span></label>
+        </div>
+        <div class="field" id="postcodeField" style="display:none;">
+          <label for="postcodeInput">Postcode</label>
+          <input id="postcodeInput" type="text" inputmode="numeric" pattern="[0-9]{4}" maxlength="4" aria-describedby="postcodeHelp" placeholder="e.g. 2000">
+          <div id="postcodeHelp" class="muted" aria-live="polite">Enter a 4-digit Australian postcode (e.g. 2000).</div>
+        </div>
+      </div>
+
+      <div class="step" data-step="2">
+        <h2>How many pubs do you want to visit?</h2>
+        <p>Enter a number — we’ll shape the route around it.</p>
+        <div class="field">
+          <label for="countInput">Number of stops</label>
+          <input id="countInput" type="number" min="2" max="10" value="4" inputmode="numeric">
+        </div>
+      </div>
+
+      <div class="step" data-step="3">
+        <h2>How long do you want to spend at each pub?</h2>
+        <p>Set your average dwell time.</p>
+        <div class="field">
+          <label for="dwellInput">Minutes per pub</label>
+          <input id="dwellInput" type="number" min="10" max="180" value="35" inputmode="numeric">
+        </div>
+      </div>
+
+      <div class="step" data-step="4">
+        <h2>What time do you want to start?</h2>
+        <p>Choose your kick-off time.</p>
+        <div class="field">
+          <label for="timeInput">Start time</label>
+          <input id="timeInput" type="time">
+        </div>
+      </div>
+
+      <div class="step" data-step="5">
+        <h2>How do you want to move between pubs?</h2>
+        <p>Pick the travel mode that fits your night.</p>
+        <div class="option">
+          <input type="radio" id="mode-walk" name="mode" value="walk" checked>
+          <label for="mode-walk"><span><strong>Walk</strong><span class="muted">Keep it close and casual.</span></span></label>
+        </div>
+        <div class="option">
+          <input type="radio" id="mode-ride" name="mode" value="ride">
+          <label for="mode-ride"><span><strong>Taxi / ride share</strong><span class="muted">Hop between spots faster.</span></span></label>
+        </div>
+        <div class="option">
+          <input type="radio" id="mode-transit" name="mode" value="transit">
+          <label for="mode-transit"><span><strong>Public transport</strong><span class="muted">Use trains, buses, or trams.</span></span></label>
+        </div>
+        <div class="summary" aria-live="polite">
+          <div class="summary-row"><span>Starting point</span><span id="summaryStart">Nearest pub</span></div>
+          <div class="summary-row"><span>Stops</span><span id="summaryStops">4 pubs</span></div>
+          <div class="summary-row"><span>Time per pub</span><span id="summaryDwell">35 mins</span></div>
+          <div class="summary-row"><span>Start time</span><span id="summaryTime">Not set</span></div>
+          <div class="summary-row"><span>Travel mode</span><span id="summaryMode">Walk</span></div>
+        </div>
+      </div>
+
+      <div class="controls">
+        <button class="btn secondary" id="back">Back</button>
+        <button class="btn primary" id="next">Next</button>
+      </div>
     </div>
-  </main>
+  </div>
+
+  <script>
+    const steps = Array.from(document.querySelectorAll('.step'));
+    const pill = document.getElementById('pill');
+    const nextBtn = document.getElementById('next');
+    const backBtn = document.getElementById('back');
+    const specificField = document.getElementById('specificField');
+    const postcodeField = document.getElementById('postcodeField');
+    const summaryEls = {
+      start: document.getElementById('summaryStart'),
+      stops: document.getElementById('summaryStops'),
+      dwell: document.getElementById('summaryDwell'),
+      time: document.getElementById('summaryTime'),
+      mode: document.getElementById('summaryMode')
+    };
+    let current = 0;
+
+    function showStep(index){
+      steps.forEach((step,i)=> step.classList.toggle('active', i === index));
+      pill.textContent = `Step ${index + 1} of ${steps.length}`;
+      backBtn.disabled = index === 0;
+      nextBtn.textContent = index === steps.length - 1 ? 'Plan my crawl' : 'Next';
+      current = index;
+    }
+
+    function updateStartInputs(){
+      const value = document.querySelector('input[name="start"]:checked')?.value;
+      specificField.style.display = value === 'specific' ? 'flex' : 'none';
+      postcodeField.style.display = value === 'postcode' ? 'flex' : 'none';
+    }
+
+    function updateSummary(){
+      const startValue = document.querySelector('input[name="start"]:checked')?.value;
+      const startLabel = startValue === 'specific'
+        ? (document.getElementById('specificInput').value.trim() || 'Specific pub')
+        : startValue === 'postcode'
+          ? (document.getElementById('postcodeInput').value.trim() ? `Postcode: ${document.getElementById('postcodeInput').value.trim()}` : 'Postcode')
+          : 'Nearest pub';
+      summaryEls.start.textContent = startLabel;
+      const stops = document.getElementById('countInput').value || '—';
+      summaryEls.stops.textContent = `${stops} pub${stops === '1' ? '' : 's'}`;
+      const dwell = document.getElementById('dwellInput').value || '—';
+      summaryEls.dwell.textContent = `${dwell} mins`;
+      const time = document.getElementById('timeInput').value;
+      summaryEls.time.textContent = time ? time : 'Not set';
+      const mode = document.querySelector('input[name="mode"]:checked')?.value || 'walk';
+      const modeLabels = { walk: 'Walk', ride: 'Taxi / ride share', transit: 'Public transport' };
+      summaryEls.mode.textContent = modeLabels[mode] || 'Walk';
+    }
+
+    function planCrawl(){
+      const startValue = document.querySelector('input[name="start"]:checked')?.value || 'nearest';
+      const modeValue = document.querySelector('input[name="mode"]:checked')?.value || 'walk';
+      const params = new URLSearchParams({
+        start: startValue,
+        specific: document.getElementById('specificInput').value.trim(),
+        postcode: document.getElementById('postcodeInput').value.trim(),
+        stops: document.getElementById('countInput').value,
+        dwell: document.getElementById('dwellInput').value,
+        time: document.getElementById('timeInput').value,
+        mode: modeValue,
+        autostart: '1',
+        autoshare: '1'
+      });
+
+      nextBtn.textContent = 'Planning...';
+      nextBtn.disabled = true;
+      window.location.href = `crawl-auto.html?${params.toString()}`;
+      const mode = document.querySelector('input[name="mode"]:checked')?.value || 'Walk';
+      summaryEls.mode.textContent = mode;
+    }
+
+    nextBtn.addEventListener('click', ()=>{
+      if (current < steps.length - 1) {
+        showStep(current + 1);
+        updateSummary();
+      } else {
+        updateSummary();
+        planCrawl();
+        nextBtn.textContent = 'Saved';
+        nextBtn.disabled = true;
+        setTimeout(()=>{ nextBtn.textContent = 'Plan my crawl'; nextBtn.disabled = false; }, 1200);
+      }
+    });
+
+    backBtn.addEventListener('click', ()=>{
+      if (current > 0) showStep(current - 1);
+    });
+
+    document.querySelectorAll('input[name="start"]').forEach(el=> el.addEventListener('change', ()=>{
+      updateStartInputs();
+      updateSummary();
+    }));
+
+    ['specificInput','postcodeInput','countInput','dwellInput','timeInput'].forEach(id=>{
+      const el = document.getElementById(id);
+      el.addEventListener('input', updateSummary);
+    });
+
+    document.querySelectorAll('input[name="mode"]').forEach(el=> el.addEventListener('change', updateSummary));
+
+    updateStartInputs();
+    updateSummary();
+  </script>
 </body>
 </html>
