--- a/privacy.html
+++ b/privacy.html
@@ -3,22 +3,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sunny — Rebuild in progress</title>
-  <style>
-    :root { --bg:#0f172a; --fg:#f8fafc; --muted:#94a3b8; }
-    * { box-sizing: border-box; }
-    html, body { height: 100%; margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background: var(--bg); color: var(--fg); }
-    main { min-height: 100%; display: grid; place-items: center; text-align: center; padding: 24px; }
-    h1 { margin: 0 0 8px; font-size: clamp(1.8rem, 3vw, 2.6rem); }
-    p { margin: 0; color: var(--muted); font-size: 1rem; }
-  </style>
+  <title>Privacy — Sunny</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main>
-    <div>
-      <h1>Sunny is rebuilding</h1>
-      <p>The pub crawl experience is being redesigned from the ground up.</p>
-    </div>
+  <div class="toolbar">
+    <h1>Sunny</h1>
+    <div class="spacer"></div>
+    <a class="tiny" href="index.html">← Back to map</a>
+  </div>
+  <main style="padding:1rem; max-width: 800px; margin: 0 auto;">
+    <h2>Privacy</h2>
+    <p>Sunny uses your browser’s geolocation (with your permission) to show venues near you. Your location does not leave your device.</p>
+    <p>When fetching venues we query public OpenStreetMap data via Overpass API. Requests are made directly from your browser to Overpass.</p>
+    <p>No personal information is collected, stored, or shared by Sunny. If you install the app, your device may cache files for offline use.</p>
+    <p>Questions? Contact: hello@sunny.example (update to your real email).</p>
   </main>
 </body>
 </html>
