--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="anonymous"/>
+  <link rel="stylesheet" href="style.css">
 
   <!-- PWA bits -->
   <link rel="manifest" href="manifest.webmanifest">
