--- a/privacy.html
+++ b/privacy.html
@@ -15,7 +15,7 @@
   <main style="padding:1rem; max-width: 800px; margin: 0 auto;">
     <h2>Privacy</h2>
     <p>Sunny uses your browser’s geolocation (with your permission) to show venues near you. Your location does not leave your device.</p>
-    <p>When fetching venues we query public OpenStreetMap data via Overpass API. Requests are made directly from your browser to Overpass.</p>
+    <p>When fetching venues and search suggestions we use Google Maps and Google Places APIs. Requests are made directly from your browser to Google’s services, which may log technical data such as IP address and request metadata.</p>
     <p>No personal information is collected, stored, or shared by Sunny. If you install the app, your device may cache files for offline use.</p>
     <p>Questions? Contact: hello@sunny.example (update to your real email).</p>
   </main>
