Refresh Places cache handling and privacy copy

--- a/privacy.html
+++ b/privacy.html
@@ -14,10 +14,11 @@
   </div>
   <main style="padding:1rem; max-width: 800px; margin: 0 auto;">
     <h2>Privacy</h2>
-    <p>Sunny uses your browser’s geolocation (with your permission) to show venues near you. Your location does not leave your device.</p>
-    <p>When fetching venues and search suggestions we use Google Maps and Google Places APIs. Requests are made directly from your browser to Google’s services, which may log technical data such as IP address and request metadata.</p>
-    <p>No personal information is collected, stored, or shared by Sunny. If you install the app, your device may cache files for offline use.</p>
-    <p>Questions? Contact: hello@sunny.example (update to your real email).</p>
+    <p>Sunny uses your browser’s location (with your permission) to show venues near you. Your exact location is used only on your device to center the map and calculate distances.</p>
+    <p>Venue discovery, search suggestions, and map tiles are loaded directly from Google Maps and Google Places. Those requests are made from your browser to Google’s services and may include technical data such as IP address, request metadata, and the map area you are viewing, subject to Google’s policies.</p>
+    <p>Ratings and photo selections stay on your device. Sunny stores any ratings you submit locally in your browser storage so they remain available the next time you visit. Selected photos are not uploaded anywhere unless you choose to share them using your own tools.</p>
+    <p>No account is required and Sunny does not collect, sell, or share personal information. If you install the app, your device may cache files for faster loading.</p>
+    <p>Questions? Contact: hello@sunny.example (replace with your real email).</p>
   </main>
 </body>
 </html>
