Fix rideshare links for DiDi

--- a/sunny-v2.8.2-enrichment/index.html
+++ b/sunny-v2.8.2-enrichment/index.html
@@ -143,6 +143,7 @@ a.tiny { font-size:.85rem; color:var(--muted); text-decoration:none; }
       <div class="actions">
         <a id="detailDirections" class="primary" target="_blank" rel="noopener">Directions</a>
         <a id="detailUber" target="_blank" rel="noopener">Uber</a>
+        <a id="detailDidi" target="_blank" rel="noopener">DiDi</a>
         <a id="detailCall" target="_blank" rel="noopener">Call</a>
         <a id="detailWebsite" target="_blank" rel="noopener">Website</a>
       </div>
