--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
     <div class="toolbar">
       <h1>Sunny</h1>
       <div class="spacer"></div>
-      <a class="tiny" href="privacy.html">Privacy</a>
+      <div class="menu">
+        <button class="menu-button" id="menu-toggle" type="button" aria-expanded="false" aria-controls="header-menu" aria-label="Open menu">
+          <span class="menu-icon" aria-hidden="true"></span>
+        </button>
+        <div class="menu-dropdown" id="header-menu" hidden>
+          <a href="https://sunnypubs.app/privacy-policy/" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
+          <a href="https://sunnypubs.app/terms-and-conditions/" target="_blank" rel="noopener noreferrer">T&amp;Cs</a>
+          <a href="https://sunnypubs.app/contact/" target="_blank" rel="noopener noreferrer">Contact</a>
+        </div>
+      </div>
     </div>
 
     <!-- Containers used by app.js -->
