--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     };
   </script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlnfno1wLJPkqpMeUfd9EJYA-Awnz4kAI&libraries=places&callback=initSunnyMap"></script>
+  <script defer src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
 
   <!-- Service Worker (optional; you already added network-first for app.js/version.json) -->
   <script>if (location.protocol.startsWith('http') && 'serviceWorker' in navigator) navigator.serviceWorker.register('sw.js');</script>
