--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
 
+  <!-- Primary Meta Tags -->
+<title>Sunny — Find great outdoor pubs</title>
+<meta name="title" content="Sunny — Find great outdoor pubs">
+<meta name="description" content="Find pubs/bars nearby, spot the best outdoor vibes, and build a pub crawl in a couple of taps.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://visit.sunnypubs.app/">
+<meta property="og:title" content="Sunny — Find great outdoor pubs">
+<meta property="og:description" content="Find pubs/bars nearby, spot the best outdoor vibes, and build a pub crawl in a couple of taps.">
+<meta property="og:image" content="https://visit.sunnypubs.app/og-image-1200x630.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<!-- Twitter / X (optional but nice) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://visit.sunnypubs.app/">
+<meta name="twitter:title" content="Sunny — Find great outdoor pubs">
+<meta name="twitter:description" content="Find pubs/bars nearby, spot the best outdoor vibes, and build a pub crawl in a couple of taps.">
+<meta name="twitter:image" content="https://visit.sunnypubs.app/og-image-1200x630.png">
+
+
   <style>
     :root { --bg:#fff; --fg:#111; --muted:#666; --brand:#111; }
     * { box-sizing: border-box; }
