Add cookie consent banner and gating

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="js/consent.js"></script>
+  <script>window.SunnyConsent?.initConsent();</script>
   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KT5WTNDF');</script>
-<!-- End Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KT5WTNDF');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sunny — Find great outdoor pubs</title>
@@ -75,6 +77,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </button>
         <div id="headerMenu" class="menu-dropdown" hidden>
           <a href="https://sunnypubs.app/privacy-policy/" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
+          <a href="#" data-cookie-settings>Cookie settings</a>
           <a href="https://sunnypubs.app/terms-and-conditions/" target="_blank" rel="noopener noreferrer">T&amp;Cs</a>
           <a href="https://sunnypubs.app/contact/" target="_blank" rel="noopener noreferrer">Contact</a>
         </div>
