--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlnfno1wLJPkqpMeUfd9EJYA-Awnz4kAI&libraries=places&callback=initSunnyMap"></script>
   <script defer src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
-  <script defer src="https://unpkg.com/lz-string@1.5.0/libs/lz-string.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"></script>
 
   <!-- Service Worker (optional; you already added network-first for app.js/version.json) -->
   <script>if (location.protocol.startsWith('http') && 'serviceWorker' in navigator) navigator.serviceWorker.register('sw.js');</script>
